--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "dependencies": {
     "gatsby": "5.9.0",
+    "gatsby-plugin-manifest": "5.10.0",
+    "gatsby-plugin-offline": "6.10.0",
     "gatsby-plugin-pnpm": "1.2.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
