--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     ]
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "6.4.0",
+    "@fortawesome/free-solid-svg-icons": "6.4.0",
+    "@fortawesome/react-fontawesome": "0.2.0",
     "gatsby": "5.9.0",
     "gatsby-plugin-manifest": "5.10.0",
     "gatsby-plugin-offline": "6.10.0",
@@ -68,10 +71,12 @@
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "gatsby-plugin-sass": "6.10.0",
     "identity-obj-proxy": "3.0.0",
     "jsdom": "22.0.0",
     "lint-staged": "13.2.2",
     "prettier": "2.8.8",
+    "sass": "1.63.4",
     "typescript": "5.0.4",
     "vite-tsconfig-paths": "4.2.0",
     "vitest": "0.31.0"
