Add Chart.js, add error catching for fetches

--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "@fortawesome/fontawesome-svg-core": "6.4.0",
     "@fortawesome/free-solid-svg-icons": "6.4.0",
     "@fortawesome/react-fontawesome": "0.2.0",
+    "chart.js": "4.3.0",
+    "chartjs-plugin-datalabels": "2.2.0",
     "gatsby": "5.9.0",
     "gatsby-plugin-manifest": "5.10.0",
     "gatsby-plugin-offline": "6.10.0",
     "gatsby-plugin-pnpm": "1.2.10",
     "react": "18.2.0",
+    "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
     "tsconfig-paths-webpack-plugin": "4.0.1"
   },
