--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "gatsby-plugin-sass": "6.10.0",
+    "husky": "8.0.3",
     "identity-obj-proxy": "3.0.0",
     "jsdom": "22.0.0",
     "lint-staged": "13.2.2",
